fix form field alignment issues

--- a/docs/static/ds4/skin.css
+++ b/docs/static/ds4/skin.css
@@ -1013,7 +1013,6 @@ span.fake-menu__status {
   color: transparent;
   cursor: default;
   font-family: inherit;
-  vertical-align: middle;
   width: 100%;
 }
 .combobox__control > input[readonly] {
