--- a/src/less/combobox/base/combobox.less
+++ b/src/less/combobox/base/combobox.less
@@ -12,7 +12,6 @@
     color: transparent;
     cursor: default;
     font-family: inherit;
-    vertical-align: middle;
     width: 100%;
 
     &[readonly] {
