--- a/src/less/combobox/ds6/combobox.less
+++ b/src/less/combobox/ds6/combobox.less
@@ -49,3 +49,15 @@ span.combobox__icon {
         background-image: url('data:image/svg+xml;base64,@{ds6-icon-chevron-down-bold-base64-light}');
     }
 }
+
+.combobox--large,
+.combobox--extra-large {
+    .combobox__control > input {
+        font-size: 18px;
+        height: @ds6-combobox-height + 8px;
+    }
+
+    span.combobox__icon {
+        .icon-chevron-down-bold(9px, @ds6-combobox-height + 8px);
+    }
+}
