--- a/src/less/select/ds6/select.less
+++ b/src/less/select/ds6/select.less
@@ -48,3 +48,19 @@ span.select__icon {
         color: @ds6-color-g204-gray;
     }
 }
+
+.select--large {
+    font-size: 18px;
+
+    > select {
+        height: @height-control-large;
+    }
+}
+
+.select--extra-large {
+    font-size: 18px;
+
+    > select {
+        height: @height-control-extra-large;
+    }
+}
