--- a/src/less/textbox/ds6/textbox.less
+++ b/src/less/textbox/ds6/textbox.less
@@ -70,13 +70,6 @@ span.textbox__icon:first-child,
     }
 }
 
-.textbox--small {
-    input.textbox__control,
-    textarea.textbox__control {
-        height: 32px;
-    }
-}
-
 .textbox--large {
     input.textbox__control,
     textarea.textbox__control {
